language/move-lang/tests/move_check/typing/spec_block_fail.exp
error: 

   ┌── tests/move_check/typing/spec_block_fail.move:3:10 ───
   │
 3 │         (spec {}: u64);
   │          ------- The type: '()'
   │                   --- Is not compatible with: 'u64'
   │                   ^^^ Invalid type annotation
   │

error: 

   ┌── tests/move_check/typing/spec_block_fail.move:4:10 ───
   │
 4 │         (spec {}: &u64);
   │          ------- The type: '()'
   │                   ---- Is not compatible with: '&u64'
   │                   ^^^^ Invalid type annotation
   │

error: 

   ┌── tests/move_check/typing/spec_block_fail.move:5:10 ───
   │
 5 │         (spec {}: (u64, u64));
   │          ------- The type: '()'
   │                   ---------- Is not compatible with: '(u64, u64)'
   │                   ^^^^^^^^^^ Invalid type annotation
   │

